crates/pg_syntax/tests/snapshots/postgres_regress/create_index_spgist@8.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO radix_text_tbl\n    SELECT 'P0123456789abcdef' FROM generate_series(1,1000);"
---
InsertStmt@0..87
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..26
    Ident@12..26 "radix_text_tbl"
  Newline@26..27 "\n"
  Whitespace@27..31 "    "
  SelectStmt@31..85
    Select@31..37 "SELECT"
    Whitespace@37..38 " "
    ResTarget@38..57
      AConst@38..57
        Sconst@38..57 "'P0123456789abcdef'"
    Whitespace@57..58 " "
    From@58..62 "FROM"
    Whitespace@62..63 " "
    RangeFunction@63..85
      List@63..85
        FuncCall@63..85
          Ident@63..78 "generate_series"
          Ascii40@78..79 "("
          AConst@79..80
            Iconst@79..80 "1"
          Ascii44@80..81 ","
          AConst@81..85
            Iconst@81..85 "1000"
  Ascii41@85..86 ")"
  Ascii59@86..87 ";"

